@@ -27,7 +27,11 @@ dependencies {
     implementation 'org.openjfx:javafx-controls:18'
     implementation 'org.openjfx:javafx-fxml:18'
     implementation 'io.github.palexdev:materialfx:11.13.5'
+
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+    testImplementation "org.testfx:testfx-core:4.0.16-alpha"
+    testImplementation "org.testfx:testfx-junit5:4.0.16-alpha"
+    testImplementation 'org.testfx:openjfx-monocle:jdk-12.0.1+2'
 
     // legacy: add all dependencies from lib folder
     implementation fileTree(include: ['*.jar'], dir: 'lib')
@@ -38,7 +42,7 @@ tasks.withType(JavaCompile) {
 }
 
 tasks.withType(JavaExec) {
-    jvmArgs("--add-opens=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED", "--add-opens=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED")
+    jvmArgs("--add-opens=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED", "--add-opens=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED", "--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED", "--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED")
 }
 
 // task to create an exectutable jar file with all necessary dependencies included and sigrnature files removed.
@@ -56,13 +60,15 @@ task fatJar(type: Jar) {
 
 test {
     useJUnitPlatform()
+    // run tets in headless mode -for testFX
+    jvmArgs "-Djava.awt.headless=true", "-Dtestfx.headless=true", "--add-opens=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED", "--add-opens=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED", "--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED", "--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED"
 }
 
 javafx {
     version = "19"
-    modules = ['javafx.controls']
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
 }
 
 application {
-    applicationDefaultJvmArgs = ['--add-opens=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED', '--add-opens=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED']
+    applicationDefaultJvmArgs = ['--add-opens=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED', '--add-opens=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED', '--add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED']
 }
